Firefox layout issues

--- a/war/StokerWeb.css
+++ b/war/StokerWeb.css
@@ -117,6 +117,7 @@ h1 {
 
 .sweb-gaugeFlowPanel {
    float: left;
+   width: 100%;
 
 }
 .sweb-panelGaugeTall{
